<resources>
    <string name="app_name">Lab3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="motley_crue">Mötley Crüe</string>
    <string name="motley_crue_web_site">www.motley.com</string>
    <string name="action_settings">Settings</string>
    <string name="MercedesBenz2015">Mercedes - Benz</string>
    <string name="MBGeländewagen">Mercedes Geländewagen</string>
    <string name="MBGLECoupe63">Mercedes-AMG GLE 63 Coupe</string>
    <string name="MBGTS">Mercedes-AMG GT S</string>
    <string name="MBC63">Mercedes-AMG C 63</string>
    <string name="start">START</string>
    <string name="cars">CARS</string>
    <string name="mp3_01">https://dl.dropboxusercontent.com/content_link/82FIBDYa2fjuZF6J4KsljB9g8gVbDeYZb5XZbtdtPD1yBVNbA042h3DpATN0dgH9/file</string>
    <string name="mp3_02">https://dl.dropboxusercontent.com/content_link/PbNQ3uVvF8d3PQODWZXhtDpNq9B6naDBT92F8HMWV1b5deo6oxM92SdwAL3JtSQN/file</string>
    <string name="mp3_03">https://dl.dropboxusercontent.com/content_link/7I6Y2wVHHhAp5e87AyRMJDzqPDIfuNdOalxnjzCKLfr7v3pUQNKkMna3Z44uRsjw/file</string>
    <string name="mp3_04">https://dl.dropboxusercontent.com/content_link/tS1JzHoXYCAZ0PzTwyHP0XTw0TAvjKWRDelCGr9T334slA8yf7J71pPU7uORc6Gh/file</string>
    <string name="mp3_tormoza">https://dl.dropboxusercontent.com/content_link/3KqAWGeD9kgkobgvnHamCPxNo6pqqPWI3P6ARhuwosNUmuTZ6tDn377sv8TY7y6I/file</string>
    <string name="textC63">ПОВСЕДНЕВНАЯ ПРАКТИЧНОСТЬ ПРЕВРАЩАЕТСЯ В ПОВСЕДНЕВНУЮ СПОРТИВНОСТЬ Дизайн седана C 63 AMG не оставит равнодушным ни одного истинного автолюбителя. Его экспрессивные формы отражают динамику в чистом виде. Чёткие линии символизируют неукротимое желание автомобиля со всей своей энергией устремиться вперёд. Спортивная решётка радиатора с крупной звездой Mercedes-Benz в центре и крыловидной поперечной ламелью служит таким же характерным для данной марки признаком, как и алюминиевый капот с модифицированным «силовыми рёбрами». При взгляде на автомобиль сбоку внимание на себя сразу же обращают широкие крылья кузова с шильдиком «6.3 AMG» и титаново-серые легкосплавные диски AMG с полировкой и дизайном «5 двойных спиц».</string>
    <string name="textGLEex">СПОРТИВНОСТЬ КУПЕ, СИЛЬНЫЕ СТОРОНЫ ВНЕДОРОЖНИКА Купе Mercedes-AMG GLE 63 S умелым образом воплощает прочно укоренившиеся принципы дизайна Mercedes-Benz – чувственность и чёткость. Причём этому флагману с двигателем V8, созданному в Аффальтербахе, удаётся переносить в повседневную жизнь завораживающую силу автоспорта, делая это волнующим и при этом энергичным, внушительном образом. Это новое четырёхдверное купе, открыто и гордо возвышающееся на своих больших колёсах, очаровывает уже с первого взгляда. Элементы дизайна, характерные для S-Модели, подчёркивают и внешне его выдающуюся динамику. Отличительные черты внешнего дизайна: Характерный для S-Модели передний бампер AMG с элементом \"A-Wing\" чёрного глянцевого цвета и молдингом цвета \"серебристый хром\" на элементе \"А-Wing\", передним спойлером в цвет кузова, крупными воздухозаборниками с дефлекторами чёрного цвета (элементы, улучшающие аэродинамику) Легкосплавные диски AMG диаметром 55,9 см (22“) с крестообразным дизайном, титаново-серого цвета с полировкой Окрашенные в красный цвет тормозные скобы тормозной системы AMG повышенной мощности Характерный для S-Модели задний бампер с декоративным элементом в цвете \"серебристый хром\" Новое расположение шильдиков с обозначением модели: \"AMG\" на левой стороне, \"GLE 63 S\" – на правой</string>
    <string name="textGex">ЛЕГЕНДА ЖИВА: ЕЩЁ СИЛЬНЕЕ И ЛУЧШЕ, ЧЕМ КОГДА-ЛИБО!! Если облик автомобиля за три десятилетия практически не изменился, а его популярность при этом нисколько не убывает, то это значит, что автопроизводитель всё делал правильно. Автомобиль G-Класса стал примером такого счастливого случая: его дизайн восхищает своей непреходящей уникальностью. Mercedes-AMG G 63, став продолжением этой славной традиции, приобрёл индивидуальность за счёт некоторых очень сдержанных изменений в дизайне. Его облик определяют решётка радиатора AMG с двойной ламелью и четырьмя хромированными вставками, а также эффектные бамперы с крупными воздухозаборниками. Характерной чертой данной модели стали также уширители крыльев кузова. Эксклюзивный экстерьер дополняют предлагаемые в качестве опции подножки из нержавеющей стали и боковые защитные молдинги со вставками из матированного алюминия. Среди других опознавательных признаков, шильдики V8 BITURBO на передних крыльях кузова и шильдик Mercedes-AMG G 63 на двери багажника. Красные тормозные суппорты и впервые доступные 20-дюймовые диски довершают волнующий облик этого автомобиля.</string>
    <string name="textGTSex">ЧИСТАЯ СПОРТИВНАЯ ГЕНЕТИКА Вашему взору открывается настоящее чудо инженерной разработки: Mercedes AMG GT. Этому суперкару удалось совместить в себе футуристичный дизайн, сбалансированное распределение массы, разумное потребление топлива и присущий только семейству AMG, узнаваемый среди сотни других рёв двигателя.</string>
    <string-array name="image_ids">
        <item>@drawable/c01</item>
        <item>@drawable/c02</item>
        <item>@drawable/c03</item>
        <item>@drawable/c04</item>
        <item>@drawable/c05</item>
        <item>@drawable/c06</item>
        <item>@drawable/c07</item>
        <item>@drawable/g01</item>
        <item>@drawable/g02</item>
        <item>@drawable/g03</item>
        <item>@drawable/g04</item>
        <item>@drawable/g05</item>
        <item>@drawable/g06</item>
        <item>@drawable/g07</item>
        <item>@drawable/gle01</item>
        <item>@drawable/gle02</item>
        <item>@drawable/gle03</item>
        <item>@drawable/gle04</item>
        <item>@drawable/gle05</item>
        <item>@drawable/gle06</item>
        <item>@drawable/gle07</item>
        <item>@drawable/gts01</item>
        <item>@drawable/gts02</item>
        <item>@drawable/gts03</item>
        <item>@drawable/gts04</item>
        <item>@drawable/gts05</item>
        <item>@drawable/gts06</item>
        <item>@drawable/gts07</item>
    </string-array>
</resources>
