<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:isScrollContainer="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/llC63">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:id="@+id/imageC63"
                    android:background="@drawable/clogo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textC63"
                    android:id="@+id/textC63ex" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/llGTS">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:id="@+id/imageGTS"
                    android:background="@drawable/gtslogo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textGTSex"
                    android:id="@+id/textGTSex" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/llG">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:id="@+id/imageG"
                    android:background="@drawable/glogo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textGex"
                    android:id="@+id/textGex" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/llGLE">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:id="@+id/imageGLE"
                    android:background="@drawable/glelogo"
                    android:adjustViewBounds="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textGLEex"
                    android:id="@+id/textGLEex" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>