<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView2" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="217dp"
                        android:layout_height="341dp"
                        android:id="@+id/layoutCarsChecker">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="80dp">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="78dp"
                                android:text="@string/MBGLECoupe63"
                                android:id="@+id/buttonGLE"
                                android:background="@color/background_button_start"
                                android:layout_gravity="top"
                                android:clickable="true"
                                android:focusable="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="80dp">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="78dp"
                                android:text="@string/MBGeländewagen"
                                android:id="@+id/buttonG"
                                android:background="@color/background_button_start"
                                android:layout_gravity="top"
                                android:clickable="true"
                                android:focusable="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="80dp">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="78dp"
                                android:text="@string/MBGTS"
                                android:id="@+id/buttonGTS"
                                android:background="@color/background_button_start"
                                android:layout_gravity="top"
                                android:clickable="true"
                                android:focusable="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="80dp">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="78dp"
                                android:text="@string/MBC63"
                                android:id="@+id/buttonC"
                                android:background="@color/background_button_start"
                                android:layout_gravity="top"
                                android:clickable="true"
                                android:focusable="true" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="336dp"
                        android:id="@+id/layoutCarsImage">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:id="@+id/ivCarsGLE"
                            android:layout_gravity="left|center_vertical"
                            android:background="@drawable/glelogo" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:id="@+id/ivCarsG"
                            android:layout_gravity="left|center_vertical"
                            android:background="@drawable/glogo" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:id="@+id/ivCarsGTS"
                            android:layout_gravity="left|center_vertical"
                            android:background="@drawable/gtslogo" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:id="@+id/ivCarsC"
                            android:layout_gravity="left|center_vertical"
                            android:background="@drawable/clogo" />
                    </LinearLayout>

                </LinearLayout>

                <WebView
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:id="@+id/webView"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:focusable="false" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>